# leptonica-1.71-cmake

./: CMakeLists.txt  configure.ac
devtools/: CMakeLists.txt  xtractprotos.c
prog/: CMakeLists.txt
src/: CMakeLists.txt  boxfunc1.c  compare.c  environ.h  gplot.c  jp2kio.c  libversions.c  parseprotos.c  recogident.c  utils.c  writefile.c
